* Apply patch sent to me by Nikolay Shaplov, written by Mark Chutchev. + Quickhack by me for Win32, don't use IE for open Links in new Window instead call Firefox and Thunderbird directly, if installed and default browser...

--- a/trunk/plugins/navigate/navcfgbase.ui
+++ b/trunk/plugins/navigate/navcfgbase.ui
@@ -83,7 +83,7 @@
             </property>
             <property stdset="1">
                 <name>text</name>
-                <string>Open links in &amp;new window</string>
+                <string>Open links in &amp;new window (Win32: When unchecked, Explorer is used, else your installed default programs.)</string>
             </property>
         </widget>
         <spacer>
