* Make Alternate-Accelerators unique for Interface

--- a/trunk/plugins/sms/smssetupbase.ui
+++ b/trunk/plugins/sms/smssetupbase.ui
@@ -42,7 +42,7 @@
                 </property>
                 <attribute>
                     <name>title</name>
-                    <string>&amp;SMS</string>
+                    <string>Hand&amp;y</string>
                 </attribute>
                 <grid>
                     <property>
