Sim-IM is no longer SIM (for a quite a long time), and should be written as Sim-IM (and not SIM-IM), as far as we should use one capital letter for each word in "Simple Instant Messenger" title.

--- a/trunk/plugins/about/aboutdlgbase.ui
+++ b/trunk/plugins/about/aboutdlgbase.ui
@@ -17,7 +17,7 @@
     </property>
     <property>
         <name>caption</name>
-        <string>About SIM</string>
+        <string>About Sim-IM</string>
     </property>
     <grid>
         <property>
