--- a/trunk/plugins/icq/icqconfigbase.ui
+++ b/trunk/plugins/icq/icqconfigbase.ui
@@ -197,7 +197,7 @@
                             <string>Use &amp;HTTP polling</string>
                         </property>
                     </widget>
-                    <widget row="6"  column="0"  rowspan="1"  colspan="3" >
+                    <widget row="7"  column="0"  rowspan="1"  colspan="3" >
                         <class>Line</class>
                         <property stdset="1">
                             <name>name</name>
@@ -305,7 +305,7 @@
                             </size>
                         </property>
                     </spacer>
-                    <widget row="7"  column="0"  rowspan="1"  colspan="3" >
+                    <widget row="8"  column="0"  rowspan="1"  colspan="3" >
                         <class>QLabel</class>
                         <property stdset="1">
                             <name>name</name>
@@ -429,6 +429,17 @@
                         <property>
                             <name>text</name>
                             <string>&amp;Keep-alive connection</string>
+                        </property>
+                    </widget>
+					<widget row="6"  column="0"  rowspan="1"  colspan="3" >
+                        <class>QCheckBox</class>
+                        <property stdset="1">
+                            <name>name</name>
+                            <cstring>chkMediaSense</cstring>
+                        </property>
+                        <property>
+                            <name>text</name>
+                            <string>Activate Network &amp;Media Sense</string>
                         </property>
                     </widget>
                 </grid>
