--- a/branches/branch-playground/plugins/_core/searchallbase.ui
+++ b/branches/branch-playground/plugins/_core/searchallbase.ui
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0" >
  <class>SearchAll</class>
  <widget class="QWidget" name="SearchAll" >
@@ -20,7 +21,13 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QWidget" native="1" name="grpMail" >
+    <widget class="QGroupBox" name="grpMail">
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
      <property name="title" stdset="0" >
       <string>&amp;E-Mail</string>
      </property>
@@ -38,7 +45,13 @@
     </widget>
    </item>
    <item>
-    <widget class="QWidget" native="1" name="grpName" >
+    <widget class="QGroupBox" name="grpName">
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
      <property name="title" stdset="0" >
       <string>&amp;Name</string>
      </property>
