--- a/branches/branch-playground/plugins/_core/newprotocolbase.ui
+++ b/branches/branch-playground/plugins/_core/newprotocolbase.ui
@@ -1,65 +1,65 @@
-<ui version="4.0" stdsetdef="1" >
-  <author></author>
-  <comment></comment>
-  <exportmacro></exportmacro>
-  <class>NewProtocolBase</class>
-  <widget class="Q3Wizard" name="Protocol" >
-    <property name="geometry" stdset="0" >
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>343</width>
-        <height>284</height>
-      </rect>
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
+ <class>NewProtocolBase</class>
+ <widget class="QWizard" name="NewProtocolBase">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>290</width>
+    <height>284</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>New connection</string>
+  </property>
+  <property name="wizardStyle">
+   <enum>QWizard::ClassicStyle</enum>
+  </property>
+  <widget class="QWizardPage" name="protocolPage">
+   <property name="title">
+    <string>Select protocol</string>
+   </property>
+   <layout class="QGridLayout">
+    <property name="margin">
+     <number>11</number>
     </property>
-    <property name="windowTitle" stdset="0" >
-      <string>New connection</string>
-    </property>
-    <widget class="QWizardPage" name="protocolPage" >
-      <attribute name="title" >
-        <string>Select protocol</string>
-      </attribute>
-      <layout class="QGridLayout" >
-        <property name="margin" stdset="0" >
-          <number>11</number>
-        </property>
-        <property name="spacing" stdset="0" >
-          <number>6</number>
-        </property>
-        <item row="0" column="0" >
-          <widget class="QLabel" name="TextLabel1" >
-            <property name="text" stdset="0" >
-              <string>Protocol:</string>
-            </property>
-            <property name="alignment" stdset="0" >
-              <set>Qt::AlignVCenter|Qt::AlignRight</set>
-            </property>
-            <property name="wordWrap" >
-              <bool>false</bool>
-            </property>
-          </widget>
-        </item>
-        <item row="0" column="1" >
-          <widget class="QComboBox" name="cmbProtocol" />
-        </item>
-        <item row="1" column="0" >
-          <spacer name="Spacer3" >
-            <property name="sizeHint" >
-              <size>
-                <width>20</width>
-                <height>20</height>
-              </size>
-            </property>
-            <property name="sizeType" >
-              <enum>QSizePolicy::Expanding</enum>
-            </property>
-            <property name="orientation" >
-              <enum>Qt::Vertical</enum>
-            </property>
-          </spacer>
-        </item>
-      </layout>
-    </widget>
+    <item row="0" column="0">
+     <widget class="QLabel" name="TextLabel1">
+      <property name="text">
+       <string>Protocol:</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QComboBox" name="cmbProtocol"/>
+    </item>
+    <item row="1" column="0">
+     <spacer name="Spacer3">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Expanding</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+   </layout>
   </widget>
-  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ </widget>
+ <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <resources/>
+ <connections/>
 </ui>
