--- a/branches/branch-playground/plugins/osd/osdconfigbase.ui
+++ b/branches/branch-playground/plugins/osd/osdconfigbase.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>OSDConfig</class>
- <widget class="QWidget" name="OSDConfig">
+ <class>OSDConfigBase</class>
+ <widget class="QWidget" name="OSDConfigBase">
   <property name="geometry">
    <rect>
     <x>0</x>
