--- a/branches/branch-playground/plugins/transparent/transparentcfgbase.ui
+++ b/branches/branch-playground/plugins/transparent/transparentcfgbase.ui
@@ -1,94 +1,105 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>TransparentCfgBase</class>
- <widget class="QWidget" name="TransparentCfgBase" >
-  <property name="geometry" >
+ <widget class="QWidget" name="TransparentCfgBase">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>304</width>
-    <height>167</height>
+    <width>530</width>
+    <height>391</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Form1</string>
   </property>
-  <layout class="QVBoxLayout" >
-   <property name="margin" >
-    <number>11</number>
-   </property>
-   <property name="spacing" >
-    <number>6</number>
-   </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QLabel" name="TextLabel1" >
-     <property name="sizePolicy" >
-      <sizepolicy>
-       <hsizetype>1</hsizetype>
-       <vsizetype>1</vsizetype>
+    <widget class="QLabel" name="TextLabel1">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <property name="text" >
+     <property name="text">
       <string>Transparency of main window:</string>
      </property>
-     <property name="alignment" >
+     <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
-     <property name="wordWrap" >
+     <property name="wordWrap">
       <bool>false</bool>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QSlider" name="sldTransparency" >
-     <property name="maximum" >
-      <number>100</number>
-     </property>
-     <property name="singleStep" >
-      <number>5</number>
-     </property>
-     <property name="pageStep" >
-      <number>20</number>
-     </property>
-     <property name="orientation" >
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="tickInterval" >
-      <number>0</number>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>opaque</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QSlider" name="sldTransparency">
+       <property name="maximum">
+        <number>100</number>
+       </property>
+       <property name="singleStep">
+        <number>5</number>
+       </property>
+       <property name="pageStep">
+        <number>20</number>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="tickInterval">
+        <number>0</number>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>transparent</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
-    <widget class="QCheckBox" name="chkInactive" >
-     <property name="text" >
+    <widget class="QCheckBox" name="chkInactive">
+     <property name="text">
       <string>Transparent only if inactive</string>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QCheckBox" name="chkMainWindow" >
-     <property name="text" >
+    <widget class="QCheckBox" name="chkMainWindow">
+     <property name="text">
       <string>Mainwindow</string>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QCheckBox" name="chkFloatings" >
-     <property name="text" >
+    <widget class="QCheckBox" name="chkFloatings">
+     <property name="text">
       <string>Floaties</string>
      </property>
     </widget>
    </item>
    <item>
     <spacer>
-     <property name="orientation" >
+     <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
-     <property name="sizeType" >
+     <property name="sizeType">
       <enum>QSizePolicy::Expanding</enum>
      </property>
-     <property name="sizeHint" >
+     <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
        <height>20</height>
