--- a/branches/branch-playground/plugins/_core/logindlgbase.ui
+++ b/branches/branch-playground/plugins/_core/logindlgbase.ui
@@ -81,6 +81,20 @@
     </layout>
    </item>
    <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QLabel" name="labelNew">
+       <property name="text">
+        <string>New profile name:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="lineEditNew"/>
+     </item>
+    </layout>
+   </item>
+   <item>
     <widget class="QGroupBox" name="groupBoxPasswords">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
