--- a/branches/branch-playground/plugins/action/actioncfgbase.ui
+++ b/branches/branch-playground/plugins/action/actioncfgbase.ui
@@ -48,6 +48,9 @@
    </item>
    <item row="0" column="0" colspan="2">
     <widget class="QTableWidget" name="lstEvent">
+     <property name="alternatingRowColors">
+      <bool>true</bool>
+     </property>
      <property name="selectionMode">
       <enum>QAbstractItemView::SingleSelection</enum>
      </property>
@@ -69,11 +72,11 @@
      <attribute name="verticalHeaderVisible">
       <bool>false</bool>
      </attribute>
-     <attribute name="verticalHeaderVisible">
-      <bool>false</bool>
+     <attribute name="verticalHeaderDefaultSectionSize">
+      <number>25</number>
      </attribute>
-     <attribute name="horizontalHeaderStretchLastSection">
-      <bool>true</bool>
+     <attribute name="verticalHeaderDefaultSectionSize">
+      <number>25</number>
      </attribute>
      <column>
       <property name="text">
