* Edit is better then browse for this case XD

--- a/branches/branch-playground/plugins/icq/aboutinfobase.ui
+++ b/branches/branch-playground/plugins/icq/aboutinfobase.ui
@@ -44,7 +44,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QTextBrowser" name="edtAbout"/>
+        <widget class="QTextEdit" name="edtAbout"/>
        </item>
       </layout>
      </widget>
