--- a/branches/branch-playground/plugins/jabber/jabberaddbase.ui
+++ b/branches/branch-playground/plugins/jabber/jabberaddbase.ui
@@ -20,7 +20,7 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QWidget" native="1" name="grpJID" >
+    <widget class="RadioGroup" native="1" name="grpJID" >
      <property name="title" stdset="0" >
       <string>&amp;JID</string>
      </property>
@@ -38,7 +38,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QWidget" native="1" name="grpMail" >
+    <widget class="RadioGroup" native="1" name="grpMail" >
      <property name="title" stdset="0" >
       <string>&amp;E-Mail</string>
      </property>
@@ -56,7 +56,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QWidget" native="1" name="grpName" >
+    <widget class="RadioGroup" native="1" name="grpName" >
      <property name="title" stdset="0" >
       <string>&amp;Name</string>
      </property>
@@ -134,6 +134,12 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <customwidgets>
+    <customwidget>
+        <class>RadioGroup</class>
+        <header location="local">intedit.h</header>
+    </customwidget>
+</customwidgets>
+<resources/>
  <connections/>
 </ui>
