--- a/branches/branch-playground/plugins/weather/wifacecfgbase.ui
+++ b/branches/branch-playground/plugins/weather/wifacecfgbase.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>WIfaceCfgBase</class>
- <widget class="QWidget" name="WIfaceCfgBase" >
-  <property name="geometry" >
+ <widget class="QWidget" name="WIfaceCfgBase">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,89 +10,74 @@
     <height>236</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Form1</string>
   </property>
-  <layout class="QVBoxLayout" >
-   <property name="margin" >
+  <layout class="QVBoxLayout">
+   <property name="margin">
     <number>11</number>
    </property>
-   <property name="spacing" >
-    <number>6</number>
-   </property>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
-      <number>6</number>
-     </property>
+    <layout class="QHBoxLayout">
      <item>
-      <widget class="QLabel" name="TextLabel2" >
-       <property name="text" >
+      <widget class="QLabel" name="TextLabel2">
+       <property name="text">
         <string>Button text:</string>
        </property>
-       <property name="wordWrap" >
+       <property name="wordWrap">
         <bool>false</bool>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="LineEdit" native="1" name="edtText" />
+      <widget class="LineEdit" name="edtText" native="true"/>
      </item>
     </layout>
    </item>
    <item>
-    <widget class="QLabel" name="TextLabel3" >
-     <property name="text" >
+    <widget class="QLabel" name="TextLabel3">
+     <property name="text">
       <string>Button tip:</string>
      </property>
-     <property name="wordWrap" >
+     <property name="wordWrap">
       <bool>false</bool>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="MultiLineEdit" native="1" name="edtTip" />
+    <widget class="MultiLineEdit" name="edtTip" native="true"/>
    </item>
    <item>
-    <widget class="QLabel" name="TextLabel3_2" >
-     <property name="text" >
+    <widget class="QLabel" name="TextLabel3_2">
+     <property name="text">
       <string>Forecast tip:</string>
      </property>
-     <property name="wordWrap" >
+     <property name="wordWrap">
       <bool>false</bool>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="MultiLineEdit" native="1" name="edtForecastTip" />
+    <widget class="MultiLineEdit" name="edtForecastTip" native="true"/>
    </item>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
-      <number>6</number>
-     </property>
+    <layout class="QHBoxLayout">
      <item>
-      <widget class="QPushButton" name="btnHelp" >
-       <property name="text" >
+      <widget class="QPushButton" name="btnHelp">
+       <property name="text">
         <string>&amp;Help</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeType" >
+       <property name="sizeType">
         <enum>QSizePolicy::Expanding</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>20</height>
