* fix state problem

--- a/branches/branch-playground/plugins/_core/interfacecfgbase.ui
+++ b/branches/branch-playground/plugins/_core/interfacecfgbase.ui
@@ -218,88 +218,7 @@
   </layout>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>optSimple</sender>
-   <signal>clicked(bool)</signal>
-   <receiver>Interface</receiver>
-   <slot>setSimpleMode(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>177</x>
-     <y>93</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>177</x>
-     <y>223</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>optChat</sender>
-   <signal>clicked(bool)</signal>
-   <receiver>Interface</receiver>
-   <slot>setChatMode(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>177</x>
-     <y>118</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>177</x>
-     <y>223</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>optNew</sender>
-   <signal>clicked(bool)</signal>
-   <receiver>Interface</receiver>
-   <slot>setOpenEachContactInContainer(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>177</x>
-     <y>208</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>177</x>
-     <y>223</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>optGroup</sender>
-   <signal>clicked(bool)</signal>
-   <receiver>Interface</receiver>
-   <slot>setOpenGroupInContainer(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>177</x>
-     <y>233</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>177</x>
-     <y>223</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>optOne</sender>
-   <signal>clicked(bool)</signal>
-   <receiver>Interface</receiver>
-   <slot>setOpenAllContactsInOneContainer(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>177</x>
-     <y>258</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>177</x>
-     <y>223</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
  <slots>
   <slot>setSimpleMode(bool)</slot>
   <slot>setChatMode(bool)</slot>
