--- a/branches/branch-playground/plugins/weather/weathercfgbase.ui
+++ b/branches/branch-playground/plugins/weather/weathercfgbase.ui
@@ -207,7 +207,7 @@
   <customwidget>
    <class>LinkLabel</class>
    <extends>QWidget</extends>
-   <header>linklabel.h</header>
+   <header>simgui/linklabel.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
