--- a/branches/branch-playground/plugins/_core/connectwndbase.ui
+++ b/branches/branch-playground/plugins/_core/connectwndbase.ui
@@ -187,7 +187,7 @@ You can add connection later using connection manager</string>
   <customwidget>
    <class>LinkLabel</class>
    <extends>QWidget</extends>
-   <header>linklabel.h</header>
+   <header>simgui/linklabel.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
