--- a/branches/branch-playground/plugins/_core/userviewcfgbase.ui
+++ b/branches/branch-playground/plugins/_core/userviewcfgbase.ui
@@ -451,7 +451,7 @@
   <customwidget>
    <class>QColorButton</class>
    <extends>QWidget</extends>
-   <header>qcolorbutton.h</header>
+   <header>simgui/qcolorbutton.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
