--- a/branches/branch-playground/plugins/action/additembase.ui
+++ b/branches/branch-playground/plugins/action/additembase.ui
@@ -130,7 +130,7 @@
   <customwidget>
    <class>LineEdit</class>
    <extends>QWidget</extends>
-   <header>editfile.h</header>
+   <header>simgui/editfile.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
