--- a/branches/branch-playground/plugins/filter/ignorelistbase.ui
+++ b/branches/branch-playground/plugins/filter/ignorelistbase.ui
@@ -49,7 +49,7 @@
     <customwidget>
       <class>ListView</class>
       <extends>QWidget</extends>
-      <header location="local" >listview.h</header>
+      <header location="local" >simgui/listview.h</header>
       <sizehint>
         <width>-1</width>
         <height>-1</height>
