--- a/branches/branch-playground/plugins/jabber/jabberaddbase.ui
+++ b/branches/branch-playground/plugins/jabber/jabberaddbase.ui
@@ -137,7 +137,7 @@
  <customwidgets>
     <customwidget>
         <class>RadioGroup</class>
-        <header location="local">intedit.h</header>
+        <header location="local">simgui/intedit.h</header>
     </customwidget>
 </customwidgets>
 <resources/>
