--- a/branches/branch-playground/plugins/logger/logconfigbase.ui
+++ b/branches/branch-playground/plugins/logger/logconfigbase.ui
@@ -63,7 +63,7 @@
   <customwidget>
    <class>EditFile</class>
    <extends>QWidget</extends>
-   <header>editfile.h</header>
+   <header>simgui/editfile.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
