--- a/branches/branch-playground/plugins/msn/msnsearchbase.ui
+++ b/branches/branch-playground/plugins/msn/msnsearchbase.ui
@@ -60,7 +60,7 @@
   <customwidget>
    <class>LinkLabel</class>
    <extends>QWidget</extends>
-   <header>linklabel.h</header>
+   <header>simgui/linklabel.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
