--- a/branches/branch-playground/plugins/__homedir/homedircfgbase.ui
+++ b/branches/branch-playground/plugins/__homedir/homedircfgbase.ui
@@ -62,7 +62,7 @@
   <customwidget>
    <class>EditFile</class>
    <extends>QWidget</extends>
-   <header>editfile.h</header>
+   <header>simgui/editfile.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
