--- a/branches/branch-playground/plugins/_core/arcfgbase.ui
+++ b/branches/branch-playground/plugins/_core/arcfgbase.ui
@@ -109,7 +109,7 @@
     <customwidget>
       <class>MultiLineEdit</class>
       <extends>QWidget</extends>
-      <header location="local" >editfile.h</header>
+      <header location="local" >simgui/editfile.h</header>
       <sizehint>
         <width>-1</width>
         <height>-1</height>
