--- a/branches/branch-playground/plugins/_core/autoreplybase.ui
+++ b/branches/branch-playground/plugins/_core/autoreplybase.ui
@@ -116,7 +116,7 @@
     <customwidget>
       <class>MultiLineEdit</class>
       <extends>QWidget</extends>
-      <header location="local" >editfile.h</header>
+      <header location="local" >simgui/editfile.h</header>
       <sizehint>
         <width>-1</width>
         <height>-1</height>
