--- a/branches/branch-playground/plugins/gpg/gpgcfgbase.ui
+++ b/branches/branch-playground/plugins/gpg/gpgcfgbase.ui
@@ -175,7 +175,7 @@
     <customwidget>
       <class>EditFile</class>
       <extends>QWidget</extends>
-      <header location="local" >editfile.h</header>
+      <header location="local" >simgui/editfile.h</header>
       <sizehint>
         <width>-1</width>
         <height>-1</height>
@@ -190,7 +190,7 @@
     <customwidget>
       <class>LinkLabel</class>
       <extends>QWidget</extends>
-      <header location="local" >linklabel.h</header>
+      <header location="local" >simgui/linklabel.h</header>
       <sizehint>
         <width>-1</width>
         <height>-1</height>
