--- a/branches/branch-playground/plugins/icq/moreinfobase.ui
+++ b/branches/branch-playground/plugins/icq/moreinfobase.ui
@@ -301,7 +301,7 @@
     <customwidget>
       <class>DatePicker</class>
       <extends>QWidget</extends>
-      <header location="local" >datepicker.h</header>
+      <header location="local" >simgui/datepicker.h</header>
       <sizehint>
         <width>-1</width>
         <height>-1</height>
