--- a/branches/branch-playground/plugins/jabber/discoinfobase.ui
+++ b/branches/branch-playground/plugins/jabber/discoinfobase.ui
@@ -469,7 +469,7 @@
   <customwidget>
    <class>ListView</class>
    <extends>QWidget</extends>
-   <header>listview.h</header>
+   <header>simgui/listview.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
