--- a/branches/branch-playground/plugins/livejournal/livejournalcfgbase.ui
+++ b/branches/branch-playground/plugins/livejournal/livejournalcfgbase.ui
@@ -293,7 +293,7 @@
   <customwidget>
    <class>LinkLabel</class>
    <extends>QWidget</extends>
-   <header>linklabel.h</header>
+   <header>simgui/linklabel.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
