--- a/branches/branch-playground/plugins/yahoo/yahoocfgbase.ui
+++ b/branches/branch-playground/plugins/yahoo/yahoocfgbase.ui
@@ -324,7 +324,7 @@
     <customwidget>
       <class>LinkLabel</class>
       <extends>QWidget</extends>
-      <header location="local" >linklabel.h</header>
+      <header location="local" >simgui/linklabel.h</header>
       <sizehint>
         <width>-1</width>
         <height>-1</height>
