--- a/branches/branch-playground/plugins/osd/osdifacebase.ui
+++ b/branches/branch-playground/plugins/osd/osdifacebase.ui
@@ -193,7 +193,7 @@
   <customwidget>
    <class>QColorButton</class>
    <extends>QWidget</extends>
-   <header>qcolorbutton.h</header>
+   <header>simgui/qcolorbutton.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
