--- a/branches/branch-playground/plugins/spell/spellcfgbase.ui
+++ b/branches/branch-playground/plugins/spell/spellcfgbase.ui
@@ -90,7 +90,7 @@ p, li { white-space: pre-wrap; }
   <customwidget>
    <class>EditFile</class>
    <extends>QWidget</extends>
-   <header>editfile.h</header>
+   <header>simgui/editfile.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
